# luxgiant-clinical

./: README.md  pyproject.toml
luxgiant_clinical/: ClinicalReport.py  Helpers.py  MaleFemale.py  OddRatios.py  ThreeCatAnalysis.py  Transformations.py  TwoCatAnalysis.py  __main__.py  exactFisher.R
notebooks/: marge_1_4.ipynb  merge_2_6_10.ipynb  merge_5_9.ipynb  patients_and_gender.ipynb  pd_early.ipynb  pd_subtype.ipynb  table_1.ipynb  table_10.ipynb  table_11.ipynb  table_12.ipynb  table_13.ipynb  table_14.ipynb  table_15.ipynb  table_2.ipynb  table_3.ipynb  table_4.ipynb  table_5.ipynb  table_6.ipynb  table_7.ipynb  table_8.ipynb  table_9.ipynb
notebooks_aux/: aux_table_1.ipynb  aux_table_10.ipynb  aux_table_12.ipynb  aux_table_13.ipynb  aux_table_2.ipynb  aux_table_3.ipynb  aux_table_4.ipynb  aux_table_5.ipynb  aux_table_5_1.ipynb  aux_table_6.ipynb  aux_table_7.ipynb  aux_table_7_1.ipynb  aux_table_8.ipynb  aux_table_9.ipynb  aux_table_9_1.ipynb  marge_1_4.ipynb  merge_5_9.ipynb  table_13.ipynb  table_14.ipynb  table_2.ipynb  table_4.ipynb  table_7.ipynb  table_9.ipynb
notebooks_finals/: appendix_1.ipynb  appendix_2.ipynb  appendix_3.ipynb  appendix_4.ipynb  appendix_5.ipynb  table_1.ipynb  table_2.ipynb  table_3.ipynb  table_4.ipynb
tests/: testing.py
